# strukly

./: .env.sample  README.md  docker-compose.yml  package-lock.json
.github/workflows/: docker-image.yml
backend/: .gitignore  INSTRUCTIONS.md  README.md  pyproject.toml
backend/src/: auth.py  database.py  main.py  models.py
backend/src/routers/: expenses.py  goals.py  users.py
backend/tests/: test_main.py
docs/: git.md
strukly-backend/: .env.example  .gitignore  Dockerfile  README.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
strukly-backend/docker-compose-dev/: docker-compose.yml
strukly-backend/prisma/: schema.prisma
strukly-backend/src/: app.ts  composition_root.ts  index.ts
strukly-backend/src/tests/: expense_budget_flow.test.ts  expense_route.test.ts
strukly-backend/src/wallet/: create_wallet.ts
strukly-frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
strukly-frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
strukly-frontend/src/components/: AddExpenseButton.tsx  Button.tsx  ErrorMessage.tsx  GoalCard.tsx  GoalModal.tsx  GoalsHeader.tsx  MobileNavBar.tsx  ProgressBar.tsx  TransactionCard.tsx  WalletCard.tsx  WalletList.tsx  index.ts  types.ts
strukly-frontend/src/css/: UserLoginOrRegister.css  WalletList.css  WalletPopUp.css  WalletSection.css
strukly-frontend/src/fetcher/: Fetcher.ts
strukly-frontend/src/hooks/: useExpenseCalc.ts  useLoadBudget.ts  useLoadExpense.ts  useLoadGoals.ts
strukly-frontend/src/loader/: TransactionLoader.ts
(+287 files in other folders)
